--- a/index.html
+++ b/index.html
@@ -17,8 +17,31 @@
         <div class="hero">
             <span>Unlock your Experience</span>
         </div>
-        <div class="form-container"></div>
-        <div class="submit"></div>
+        <div class="body">
+            <div class="body-text">
+                <span>Sign up now!</span>
+            </div>
+            <div class="form-container">
+                <form method="post">
+                    <div class="form-row">
+                        <label for="username">Username</label>
+                        <input type="text" name="username" id="username">
+                        <label for="mail">E-mail</label>
+                        <input type="email" name="useremail" id="mail">
+                    </div>
+                    <div class="form-row">
+                        <label for="pwd">Password</label>
+                        <input type="password" name="userpass" id="pwd">
+                        <label for="pwdconfirm">Confirm password</label>
+                        <input type="password" name="userpassconfirm" id="pwdconfirm">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="submit">
+            <button type="submit">Create Account</button>
+            <span>Already signed up? <a href="">Log In</a></span>
+        </div>
     </div>
 </div>
 </body>
